# filevault

./: .converagerc  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  config.ini  docker-compose.yml  pyproject.toml  test.py
app/: main.py
app/api/: base.py  common.py
app/api/applications/: api.py  dependencies.py  examples.py  models.py  repository.py  schemas.py
app/api/auth/: api.py  dependencies.py  examples.py  repository.py  schemas.py
app/api/files/: api.py  dependencies.py  examples.py  repository.py  schemas.py
app/api/types/: api.py  dependencies.py  examples.py  models.py  repository.py  schemas.py
app/api/users/: api.py  dependencies.py  examples.py  models.py  repository.py  schemas.py
app/core/: config.py  database.py
app/core/errors/: http_error.py  validation_error.py
app/core/utils/: logging.py  paginate.py
app/helpers/: aws.py  jwt_bearer.py  jwt_handler.py
app/helpers/mails/: forget_password.py
app/resources/: allows.py  strings.py
app/router/: endpoints.py
db/: Dockerfile  create.sql
db/dump/: users.sql
migrations/: env.py  script.py.mako  utils.py
migrations/versions/: 20240116_0819_a8b6b2ec95ff_0001_create_table_users.py  20240116_0951_bbfb7d8a0e02_0002_create_table_apps.py  20240116_1049_af415cac288e_0003_create_table_types.py  20240116_1755_c52af99eda94_0004_create_table_user_password_tokens.py  20240311_1548_06ea38c3e3c0_0005_alter_table_apps.py  20240320_1421_ff90dbda2b7e_0006_alter_table_apps.py  20240715_1828_9d9338d053fb_0007_alter_table_types_add_field_content_.py
